cleaned up code

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Thoughts Gallery</title>
+  <title>A Gallery of Thoughts</title>
   <meta author="Carl Klier">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
