start to add mobile first css

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>A Gallery of Thoughts</title>
+  <title>A Gallery of My Thoughts</title>
   <meta author="Carl Klier">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+  <link href="./resources/css/flexindex.css" type="text/css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 
