add media queries

--- a/index.html
+++ b/index.html
@@ -17,18 +17,34 @@
       <div class="art frame2">
         <div class="text">The Second Article is a Very Long Article and has a Long Title</div>
       </div>
-      <div class="art frame3"></div>
-      <div class="art frame4"></div>
-      <div class="art frame5"></div>
+      <div class="art frame3">
+        <div class="text">The Third Article is a Very Long Article and has a Long Title but is even longer than the second</div>
+      </div>
+      <div class="art frame4">
+       <div class="text">The fourth Article is a Very Long Article and has a Long Title</div>
+      </div>
+      <div class="art frame5">
+        <div class="text">The fifth Article is a Very Long Article and has a Long Title</div>
+      </div>
       <div class="art frame6">
+        <div class="text">The sixth Article is a Very Long Article and has a Long Title</div>
       </div>
       <div class="art frame7">
+        <div class="text">The seventh Article is a Very Long Article and has a Long Title</div>
       </div>
-      <div class="art frame8"></div>
-      <div class="art frame9"></div>
-      <div class="art frame10"></div>
+      <div class="art frame8">
+        <div class="text">The eighth Article is a Very Long Article and has a Long Title</div>
+      </div>
+      <div class="art frame9">
+        <div class="text">The ninth Article is a Very Long Article and has a Long Title</div>
+      </div>
+      <div class="art frame10">
+        <div class="text">The Last Article is a Very Long Article and has a Long Title</div>
+      </div>
     </div>
 
+    <script src="./resources/scripts/clamp.js"></script>
     <script src="./resources/scripts/makeActive.js"></script>
+
 </body>
 </html>
